# LIMO_Smart_Sentinel

./: .env  README.md  install1.sh  install2.sh  makefile
app/: limo_app.launch.py  limo_app_server.py  log_relay.py
limo_patrol/: package.xml  setup.py
py_bt_ros_1/: requirements.txt
py_bt_ros_1/install/: local_setup.sh  setup.bash
py_bt_ros_1/modules/: base_bt_nodes.py
py_bt_ros_1/scenarios/test/: HOW_TO_REGISTER_PERSON.md  QUICK_START.md  REGISTER_PERSON_USAGE.md  RUN_GUIDE.md  bt_nodes.py  config_register.yaml  follow_waypoints_example.xml  register_person.xml  register_person_example.xml  test.xml  test_patrol_nodes.xml  test_telegram_image.xml
py_bt_ros_1/src/limo_night_patrol/: README.md  setup.cfg  setup.py
py_bt_ros_1/src/limo_night_patrol/limo_night_patrol/: depth_obstacle_detector_node.py
team_ws/MinGeun-SMG/limo_fire_py/: test_serial.py
team_ws/MinGeun-SMG/limo_fire_py/install/: local_setup.sh  setup.sh
team_ws/MinGeun-SMG/limo_fire_py/log/: latest_build
team_ws/han1371/install/: local_setup.sh  setup.sh
team_ws/han1371/limo_night_patrol-1/limo_night_patrol/: dummy_limo_base_node.py  dummy_rgb_publisher_node.py
team_ws/han1371/limo_patrol/install/: local_setup.sh  setup.sh
team_ws/han1371/limo_patrol/install/limo_patrol/share/limo_patrol/: package.sh  package.xml
team_ws/han1371/limo_patrol/install/limo_patrol/share/limo_patrol/config/: waypoints.yaml
team_ws/han1371/limo_patrol/install/limo_patrol/share/limo_patrol/launch/: limo_patrol.launch.py  limo_patrol_full.launch.py
team_ws/han1371/limo_patrol/launch/: limo_patrol.launch.py
team_ws/han1371/limo_patrol/log/: latest_build
team_ws/han1371/log/: latest_build
team_ws/psh030917/py_bt_ros_1/: README.md  config.yaml
team_ws/psh030917/py_bt_ros_1/install/limo_night_patrol/share/limo_night_patrol/: package.dsv  package.ps1  package.sh  package.xml
(+131 files in other folders)
